projects/tpdsl-code/code/trans/ast-st/CymbolParser.java
/***
 * Excerpted from "Language Implementation Patterns",
 * published by The Pragmatic Bookshelf.
 * Copyrights apply to this code. It may not be used to create training material, 
 * courses, books, articles, and the like. Contact us if you are in doubt.
 * We make no guarantees that this code is fit for any purpose. 
 * Visit http://www.pragmaticprogrammer.com/titles/tpdsl for more book information.
***/
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g 2009-09-23 17:38:00

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CymbolParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CLASS_DECL", "METHOD_DECL", "ARG_DECL", "BLOCK", "VAR_DECL", "FIELD_DECL", "CALL", "ELIST", "EXPR", "UNARY_MINUS", "UNARY_NOT", "ASSIGN", "ADDR", "DEREF", "ADD", "MEMBER", "ID", "INT", "FLOAT", "CHAR", "LETTER", "WS", "SL_COMMENT", "'{'", "'}'", "';'", "':'", "'('", "')'", "','", "'[]'", "'*'", "'float'", "'int'", "'char'", "'boolean'", "'void'", "'if'", "'else'", "'return'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'-'", "'/'", "'!'", "'&'", "'['", "']'", "'->'", "'true'", "'false'"
    };
    public static final int T__42=42;
    public static final int T__28=28;
    public static final int T__57=57;
    public static final int EXPR=12;
    public static final int T__51=51;
    public static final int T__47=47;
    public static final int FLOAT=22;
    public static final int T__50=50;
    public static final int FIELD_DECL=9;
    public static final int BLOCK=7;
    public static final int T__39=39;
    public static final int T__30=30;
    public static final int T__46=46;
    public static final int T__52=52;
    public static final int UNARY_MINUS=13;
    public static final int INT=21;
    public static final int UNARY_NOT=14;
    public static final int T__27=27;
    public static final int ASSIGN=15;
    public static final int T__49=49;
    public static final int METHOD_DECL=5;
    public static final int T__48=48;
    public static final int T__54=54;
    public static final int MEMBER=19;
    public static final int T__34=34;
    public static final int SL_COMMENT=26;
    public static final int ELIST=11;
    public static final int T__56=56;
    public static final int ID=20;
    public static final int LETTER=24;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int ARG_DECL=6;
    public static final int WS=25;
    public static final int CHAR=23;
    public static final int T__58=58;
    public static final int T__44=44;
    public static final int T__33=33;
    public static final int T__29=29;
    public static final int T__45=45;
    public static final int T__55=55;
    public static final int CLASS_DECL=4;
    public static final int ADDR=16;
    public static final int T__43=43;
    public static final int T__31=31;
    public static final int T__40=40;
    public static final int EOF=-1;
    public static final int T__53=53;
    public static final int T__32=32;
    public static final int T__38=38;
    public static final int CALL=10;
    public static final int T__37=37;
    public static final int DEREF=17;
    public static final int VAR_DECL=8;
    public static final int ADD=18;
    public static final int T__41=41;

    // delegates
    // delegators


        public CymbolParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CymbolParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CymbolParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:26:1: compilationUnit : ( classDeclaration | methodDeclaration | varDeclaration )+ ;
    public final CymbolParser.compilationUnit_return compilationUnit() throws RecognitionException {
        CymbolParser.compilationUnit_return retval = new CymbolParser.compilationUnit_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CymbolParser.classDeclaration_return classDeclaration1 = null;

        CymbolParser.methodDeclaration_return methodDeclaration2 = null;

        CymbolParser.varDeclaration_return varDeclaration3 = null;



        try {
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:28:5: ( ( classDeclaration | methodDeclaration | varDeclaration )+ )
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:28:9: ( classDeclaration | methodDeclaration | varDeclaration )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:28:9: ( classDeclaration | methodDeclaration | varDeclaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case CLASS_DECL:
                    {
                    alt1=1;
                    }
                    break;
                case 36:
                case 37:
                case 38:
                case 39:
                case 40:
                    {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==35) ) {
                        alt1=3;
                    }
                    else if ( (LA1_3==ID) ) {
                        int LA1_6 = input.LA(3);

                        if ( (LA1_6==31) ) {
                            alt1=2;
                        }
                        else if ( (LA1_6==ASSIGN||LA1_6==29||LA1_6==34) ) {
                            alt1=3;
                        }


                    }


                    }
                    break;
                case ID:
                    {
                    int LA1_4 = input.LA(2);

                    if ( (LA1_4==ID) ) {
                        int LA1_6 = input.LA(3);

                        if ( (LA1_6==31) ) {
                            alt1=2;
                        }
                        else if ( (LA1_6==ASSIGN||LA1_6==29||LA1_6==34) ) {
                            alt1=3;
                        }


                    }
                    else if ( (LA1_4==35) ) {
                        alt1=3;
                    }


                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:28:13: classDeclaration
            	    {
            	    pushFollow(FOLLOW_classDeclaration_in_compilationUnit193);
            	    classDeclaration1=classDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, classDeclaration1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:28:32: methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_compilationUnit197);
            	    methodDeclaration2=methodDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:28:52: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_compilationUnit201);
            	    varDeclaration3=varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, varDeclaration3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {
              ((CommonTree)retval.tree).setUnknownTokenBoundaries();
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class classDeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:32:1: classDeclaration : 'class' ID ( superClass )? '{' ( classMember )+ '}' ';' -> ^( 'class' ID ( superClass )? ( classMember )+ ) ;
    public final CymbolParser.classDeclaration_return classDeclaration() throws RecognitionException {
        CymbolParser.classDeclaration_return retval = new CymbolParser.classDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal4=null;
        Token ID5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token char_literal10=null;
        CymbolParser.superClass_return superClass6 = null;

        CymbolParser.classMember_return classMember8 = null;


        CommonTree string_literal4_tree=null;
        CommonTree ID5_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree char_literal9_tree=null;
        CommonTree char_literal10_tree=null;
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_CLASS_DECL=new RewriteRuleTokenStream(adaptor,"token CLASS_DECL");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_classMember=new RewriteRuleSubtreeStream(adaptor,"rule classMember");
        RewriteRuleSubtreeStream stream_superClass=new RewriteRuleSubtreeStream(adaptor,"rule superClass");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:33:5: ( 'class' ID ( superClass )? '{' ( classMember )+ '}' ';' -> ^( 'class' ID ( superClass )? ( classMember )+ ) )
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:33:9: 'class' ID ( superClass )? '{' ( classMember )+ '}' ';'
            {
            string_literal4=(Token)match(input,CLASS_DECL,FOLLOW_CLASS_DECL_in_classDeclaration231); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CLASS_DECL.add(string_literal4);

            ID5=(Token)match(input,ID,FOLLOW_ID_in_classDeclaration233); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);

            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:33:20: ( superClass )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==30) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:33:20: superClass
                    {
                    pushFollow(FOLLOW_superClass_in_classDeclaration235);
                    superClass6=superClass();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_superClass.add(superClass6.getTree());

                    }
                    break;

            }

            char_literal7=(Token)match(input,27,FOLLOW_27_in_classDeclaration238); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_27.add(char_literal7);

            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:33:36: ( classMember )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||(LA3_0>=36 && LA3_0<=40)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:33:36: classMember
            	    {
            	    pushFollow(FOLLOW_classMember_in_classDeclaration240);
            	    classMember8=classMember();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classMember.add(classMember8.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            char_literal9=(Token)match(input,28,FOLLOW_28_in_classDeclaration243); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_28.add(char_literal9);

            char_literal10=(Token)match(input,29,FOLLOW_29_in_classDeclaration245); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_29.add(char_literal10);



            // AST REWRITE
            // elements: superClass, classMember, CLASS_DECL, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 34:9: -> ^( 'class' ID ( superClass )? ( classMember )+ )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:34:12: ^( 'class' ID ( superClass )? ( classMember )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_CLASS_DECL.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:34:25: ( superClass )?
                if ( stream_superClass.hasNext() ) {
                    adaptor.addChild(root_1, stream_superClass.nextTree());

                }
                stream_superClass.reset();
                if ( !(stream_classMember.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_classMember.hasNext() ) {
                    adaptor.addChild(root_1, stream_classMember.nextTree());

                }
                stream_classMember.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classDeclaration"

    public static class superClass_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "superClass"
    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:36:1: superClass : ':' ID -> ^( ':' ID ) ;
    public final CymbolParser.superClass_return superClass() throws RecognitionException {
        CymbolParser.superClass_return retval = new CymbolParser.superClass_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal11=null;
        Token ID12=null;

        CommonTree char_literal11_tree=null;
        CommonTree ID12_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:37:5: ( ':' ID -> ^( ':' ID ) )
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:37:9: ':' ID
            {
            char_literal11=(Token)match(input,30,FOLLOW_30_in_superClass285); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_30.add(char_literal11);

            ID12=(Token)match(input,ID,FOLLOW_ID_in_superClass287); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID12);



            // AST REWRITE
            // elements: ID, 30
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 37:16: -> ^( ':' ID )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:37:19: ^( ':' ID )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_30.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "superClass"

    public static class classMember_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classMember"
    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:40:1: classMember : ( varDeclaration | methodDeclaration );
    public final CymbolParser.classMember_return classMember() throws RecognitionException {
        CymbolParser.classMember_return retval = new CymbolParser.classMember_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CymbolParser.varDeclaration_return varDeclaration13 = null;

        CymbolParser.methodDeclaration_return methodDeclaration14 = null;



        try {
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:41:5: ( varDeclaration | methodDeclaration )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=36 && LA4_0<=40)) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==ID) ) {
                    int LA4_3 = input.LA(3);

                    if ( (LA4_3==31) ) {
                        alt4=2;
                    }
                    else if ( (LA4_3==ASSIGN||LA4_3==29||LA4_3==34) ) {
                        alt4=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 3, input);

                        throw nvae;
                    }
                }
                else if ( (LA4_1==35) ) {
                    alt4=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA4_0==ID) ) {
                int LA4_2 = input.LA(2);

                if ( (LA4_2==ID) ) {
                    int LA4_3 = input.LA(3);

                    if ( (LA4_3==31) ) {
                        alt4=2;
                    }
                    else if ( (LA4_3==ASSIGN||LA4_3==29||LA4_3==34) ) {
                        alt4=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 3, input);

                        throw nvae;
                    }
                }
                else if ( (LA4_2==35) ) {
                    alt4=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:41:9: varDeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_varDeclaration_in_classMember314);
                    varDeclaration13=varDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, varDeclaration13.getTree());

                    }
                    break;
                case 2 :
                    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:42:9: methodDeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_methodDeclaration_in_classMember324);
                    methodDeclaration14=methodDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classMember"

    public static class methodDeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "methodDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:46:1: methodDeclaration : type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) ;
    public final CymbolParser.methodDeclaration_return methodDeclaration() throws RecognitionException {
        CymbolParser.methodDeclaration_return retval = new CymbolParser.methodDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        CymbolParser.type_return type15 = null;

        CymbolParser.formalParameters_return formalParameters18 = null;

        CymbolParser.block_return block20 = null;


        CommonTree ID16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal19_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:47:5: ( type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) )
            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:47:9: type ID '(' ( formalParameters )? ')' block
            {
            pushFollow(FOLLOW_type_in_methodDeclaration347);
            type15=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type15.getTree());
            ID16=(Token)match(input,ID,FOLLOW_ID_in_methodDeclaration349); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID16);

            char_literal17=(Token)match(input,31,FOLLOW_31_in_methodDeclaration351); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_31.add(char_literal17);

            // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:47:21: ( formalParameters )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||(LA5_0>=36 && LA5_0<=40)) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:47:21: formalParameters
                    {
                    pushFollow(FOLLOW_formalParameters_in_methodDeclaration353);
                    formalParameters18=formalParameters();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_formalParameters.add(formalParameters18.getTree());

                    }
                    break;

            }

            char_literal19=(Token)match(input,32,FOLLOW_32_in_methodDeclaration356); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_32.add(char_literal19);

            pushFollow(FOLLOW_block_in_methodDeclaration358);
            block20=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block20.getTree());


            // AST REWRITE
            // elements: ID, block, type, formalParameters
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 48:9: -> ^( METHOD_DECL type ID ( formalParameters )? block )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:48:12: ^( METHOD_DECL type ID ( formalParameters )? block )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_DECL, "METHOD_DECL"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:48:34: ( formalParameters )?
                if ( stream_formalParameters.hasNext() ) {
                    adaptor.addChild(root_1, stream_formalParameters.nextTree());

                }
                stream_formalParameters.reset();
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "methodDeclaration"

    public static class formalParameters_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formalParameters"
    // /Users/parrt/research/book/TPDSL/Book/code/trans/ast-st/Cymbol.g:52:1: formalParameters : parameter ( ',' parameter )* -> ( parameter )+ ;
    public final CymbolParser.formalParameters_return formalParameters() throws RecognitionException {
        CymbolParser.formalParameters_return retval = new CymbolParser.formalParameters_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal22=null;
        CymbolParser.parameter_return parameter21 = null;

        CymbolParser.parameter_return parameter23 = null;

